Jolokia authentication fix + verification that jolokia is up