@@ -4,51 +4,67 @@
  */
 package io.brokerqe.claire.helpers;
 
+import io.brokerqe.claire.ArtemisConstants;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.InputStreamReader;
-import java.io.Reader;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
-import java.nio.charset.StandardCharsets;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.util.Base64;
 
 public class JolokiaHelper {
 
-    final private static String JOLOKIA_CALL_ENDPOINT = "/console/jolokia/exec/org.apache.activemq.artemis";
-    final private static String JOLOKIA_BROKER_PARAM = ":broker=\"amq-broker\"";
-    final private static String JOLOKIA_GET_ADRESSSETTING_PARAM = "/getAddressSettingsAsJSON/";
-    final private static String JOLOKIA_ORIGIN_HEADER = "http://localhost:8161";
-    final private static String DEFAULT_USER = "admin";
-    final private static String DEFAULT_PASS = "admin";
-
     static final Logger LOGGER = LoggerFactory.getLogger(JolokiaHelper.class);
 
 
-    private static URL getJolokiaAddressCallURL(String host, String queue)  {
-        String jolokiaCallUrlParams = JOLOKIA_CALL_ENDPOINT + JOLOKIA_BROKER_PARAM + JOLOKIA_GET_ADRESSSETTING_PARAM + queue + "/";
-        URL fullUrl = null;
+    private static URI getJolokiaAddress(String host, String requestPath) {
+        String jolokiaParams = ArtemisConstants.JOLOKIA_CALL_ENDPOINT + ArtemisConstants.JOLOKIA_BROKER_PARAM + requestPath;
+        URI fullUrl = null;
         try {
-            fullUrl = new URL("http://" + host + jolokiaCallUrlParams);
-        } catch (MalformedURLException e) {
-            LOGGER.error("MalformedURLException; incorrect host? Params: host={}, urlParams={}\n message: {}", host, jolokiaCallUrlParams, e.getMessage());
-            e.printStackTrace();
+            fullUrl = new URI("http://" + host + jolokiaParams);
+        } catch (URISyntaxException e) {
+            LOGGER.error("URISyntaxException; incorrect host? Params: host={}, urlParams={}\n message: {}", host, jolokiaParams, e.getMessage());
             throw new RuntimeException(e);
         }
         return fullUrl;
     }
+    private static URI getJolokiaAddressCallURL(String host, String queue) {
+        return getJolokiaAddress(host, ArtemisConstants.JOLOKIA_ADDRESSETTINGS_ENDPOINT + queue + "/");
+    }
 
-    public static String getAddressSettings(String host, String queue) throws IOException {
-        return getAddressSettings(host, queue, DEFAULT_USER, DEFAULT_PASS);
+    public static String getAddressSettings(String host, String queue) {
+        return getAddressSettings(host, queue, ArtemisConstants.ADMIN_NAME, ArtemisConstants.ADMIN_PASS);
+    }
+
+    public static Boolean checkJolokiaConnection(String host) {
+        HttpRequest request = null;
+        String userpass = ArtemisConstants.ADMIN_NAME + ":" + ArtemisConstants.ADMIN_PASS;
+        String basicAuth = new String(Base64.getEncoder().encode(userpass.getBytes()));
+        try {
+            request = HttpRequest.newBuilder(getJolokiaAddress(host, ArtemisConstants.JOLOKIA_STATUS_ENDPOINT))
+                    .header("Origin", ArtemisConstants.JOLOKIA_ORIGIN_HEADER)
+                    .header("Authorization", "Basic " + basicAuth)
+                    .GET()
+                    .build();
+        } catch (Exception e) {
+            return false;
+        }
+        try {
+            HttpClient client = HttpClient.newHttpClient();
+            HttpResponse response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            return response.statusCode() == HttpURLConnection.HTTP_OK;
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     /**
-     * @param host full hostname of broker. it is
+     * @param host  ull hostname of broker. it is
      * @param queue queue for which addresssettings are retrieved
      * @param user username for broker authentication
      * @param pass password for broker authentication
@@ -56,35 +72,28 @@ public class JolokiaHelper {
      * @throws IOException
      */
     public static String getAddressSettings(String host, String queue, String user, String pass) {
-        HttpURLConnection conn = null;
-        try {
-            conn = (HttpURLConnection) getJolokiaAddressCallURL(host, queue).openConnection();
-        } catch (IOException e) {
-            LOGGER.error("Unable to open connection to {}\n message: {}", getJolokiaAddressCallURL(host, queue), e.getMessage());
-            throw new RuntimeException(e);
-        }
-        conn.setRequestProperty("Origin", JOLOKIA_ORIGIN_HEADER);
-        String userpass = user + ":" + pass;
+        HttpRequest request = null;
+        String userpass =  ArtemisConstants.ADMIN_NAME + ":" + ArtemisConstants.ADMIN_PASS;
         String basicAuth = new String(Base64.getEncoder().encode(userpass.getBytes()));
-        conn.setRequestProperty("Authorization", basicAuth);
-        InputStream contentStream = null;
         try {
-            contentStream = conn.getInputStream();
-        } catch (IOException e) {
-            LOGGER.error("Unable to open inputstream on connection");
+            request = HttpRequest.newBuilder(getJolokiaAddressCallURL(host, queue))
+                    //   .header("Origin", JOLOKIA_ORIGIN_HEADER) - disabled!
+                    .header("Authorization", "Basic " + basicAuth)
+                    .GET()
+                    .build();
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
-        StringBuilder sb = new StringBuilder();
-        try (Reader reader = new BufferedReader(new InputStreamReader(contentStream, StandardCharsets.UTF_8))) {
-            int c = 0;
-            while ((c = reader.read()) != -1) {
-                sb.append((char) c);
+        try {
+            HttpClient client = HttpClient.newHttpClient();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            if (response.statusCode() != HttpURLConnection.HTTP_OK) {
+                throw new RuntimeException("Unexpected response from Jolokia: " + response.statusCode());
             }
-        } catch (IOException e) {
-            LOGGER.error("Unable to create reader of {}\n message: {}", contentStream, e.getMessage());
+            return response.body();
+        } catch (Exception e) {
             throw new RuntimeException(e);
         }
-        return sb.toString();
     }
 
 }
